--- a/First_Semester_Unit1_concept_1_Lesson1.html
+++ b/First_Semester_Unit1_concept_1_Lesson1.html
@@ -704,7 +704,7 @@
       <input type="text" id="studentName">
     </div>
 
-    <!-- سؤال الجدول مع صور -->
+    <!-- وصل سؤال الجدول مع صور -->
     <div class="match-table-question">
       <h3>(B) Choose from column (A) what suits it in both columns (B) and (C):</h3>
 
